# He3_counter_tubes

He3_counter/: CMakeLists.txt  He3_counter.cc  READMY.txt  env_Geant4_Qt_Garfield_root6_2019.sh  myrun.mac  run.sh  vis.mac
He3_counter/include/: AnalysisROOT.hh  He3_counterDetectorConstruction.hh  He3_counterEventAction.hh  He3_counterParameters.hh  He3_counterPrimaryGeneratorAction.hh  He3_counterRunAction.hh  He3_counterSteppingAction.hh
He3_counter/post_geant_analysys/: test.C
He3_counter/src/: AnalysisROOT.cc  He3_counterDetectorConstruction.cc  He3_counterEventAction.cc  He3_counterPrimaryGeneratorAction.cc  He3_counterRunAction.cc  He3_counterSteppingAction.cc
